engine-net-2/tests/negative/NegAndPartialEdge.gm
node class NN {
  val:int;
}